# forinda-flask-template

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LINTING.md  MONGODB_STATUS.md  PROJECT_STRUCTURE.md  Pipfile  README.md  README_MONGODB.md  TESTING.md  VALIDATOR.md  generate_env.sh  lint.sh  lint_check.py  main.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  start.sh
.github/workflows/: lint.yml
app/: app.py  database.py  models.py.backup  schemas_old.py  settings.py  swagger.py
app/core/: __init__.py  base_model.py  validator.py  validator_examples.py
app/models/: __init__.py  article.py  category.py  collection.py  file.py  user.py
app/routes/: api.py  articles.py  articles_old.py  auth.py  categories.py  categories_old.py  collections.py  files.py  health.py  storage.py
app/schemas/: README.md  __init__.py  article.py  auth.py  category.py  collection.py  file.py
app/utils/: __init__.py  decorators.py  file_manager.py  jwt_utils.py  logger.py  pagination.py
tests/: conftest.py  test_auth.py  test_categories.py  test_pagination.py  test_validator.py
uploads/: .gitkeep
